--- a/templates/hr/sidebar.html
+++ b/templates/hr/sidebar.html
@@ -80,9 +80,16 @@
                     <i data-feather="file-text"></i><span>Reports</span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="nav-link" href="#">Daily Attendance</a></li>
-                    <li><a class="nav-link" href="#">Monthly Attendance</a></li>
+                    <li><a class="nav-link" href="{{ url_for('hr_report.view_report') }}">Monthly Attendance</a></li>
+{#                    <li><a class="nav-link" href="{{ url_for('hr_report.view_report') }}">Monthly Attendance</a></li>#}
                 </ul>
+            </li>
+
+
+            <li class="dropdown">
+                <a href="{{ url_for('auth.logout') }}" class="nav-link">
+                    <i class="fas fa-sign-out-alt"></i><span>Logout</span>
+                </a>
             </li>
 
         </ul>
