--- a/templates/auth-profile.html
+++ b/templates/auth-profile.html
@@ -32,7 +32,7 @@
                         <div class="col-12 col-md-12 col-lg-4">
                             <div class="card author-box">
                                 <div class="card-body text-center">
-                                    <img alt="image" src="{{ url_for('static', filename='assets/img/users/user-8.png') }}"
+                                    <img alt="image" src="{{ url_for('static', filename='assets/img/banner/5.png') }}"
                                          class="rounded-circle author-box-picture" style="width:100px;">
                                     <div class="mt-3">
                                         <h4>{{ user.name }}</h4>
