--- a/templates/systemadmin/sidebar.html
+++ b/templates/systemadmin/sidebar.html
@@ -18,7 +18,7 @@
     <ul class="navbar-nav navbar-right">
         <li class="dropdown">
             <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
-                <img alt="image" src="{{ url_for('static', filename='assets/img/users/user-8.png') }}"
+                <img alt="image" src="{{ url_for('static', filename='assets/img/banner/5.png') }}"
                      class="user-img-radious-style">
                 <span class="d-sm-none d-lg-inline-block"></span>
             </a>
