--- a/templates/employee/sidebar.html
+++ b/templates/employee/sidebar.html
@@ -41,7 +41,7 @@
 <div class="main-sidebar sidebar-style-2">
     <aside id="sidebar-wrapper">
         <div class="sidebar-brand">
-            <a href="{{ url_for('employee.index') }}">
+            <a href="{{ url_for('employee.dashboard') }}">
                 <img alt="image" src="{{ url_for('static', filename='assets/img/logo.png') }}"
                      class="header-logo"/>
                 <span class="logo-name">FaceTrack</span>
@@ -49,26 +49,10 @@
         </div>
         <ul class="sidebar-menu">
             <li class="menu-header">Employee</li>
-            <li class="dropdown {% if request.endpoint == 'employee.index' %}active{% endif %}">
-                <a href="{{ url_for('employee.index') }}" class="nav-link">
+            <li class="dropdown {% if request.endpoint == 'employee.dashboard' %}active{% endif %}">
+                <a href="{{ url_for('employee.dashboard') }}" class="nav-link">
                     <i data-feather="monitor"></i><span>Dashboard</span>
                 </a>
-            </li>
-
-            <li class="dropdown {% if request.endpoint == 'employee.index' %}active{% endif %}">
-                <a href="{{ url_for('employee.index') }}" class="nav-link">
-                    <i data-feather="calendar"></i><span>Attendance</span>
-                </a>
-            </li>
-
-            <li class="dropdown">
-                <a href="#" class="menu-toggle nav-link has-dropdown">
-                    <i data-feather="file-text"></i><span>Reports</span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="nav-link" href="#">Daily Attendance</a></li>
-                    <li><a class="nav-link" href="#">Monthly Attendance</a></li>
-                </ul>
             </li>
 
         </ul>
